Spring Security Semi-Final Step

--- a/src/main/resources/templates/Project/new-project.html
+++ b/src/main/resources/templates/Project/new-project.html
@@ -26,6 +26,9 @@
 					th:value="${aEmployee.employeeId}"
 					th:text="${aEmployee.firstname}">
 			</select>
+			
+			<input type ="hidden" name="_csrf" th:value="${_csrf.token}"/>
+
 		
 		<button type="submit">Create Project</button>
 		
