--- a/src/main/resources/templates/Employee/new-employee.html
+++ b/src/main/resources/templates/Employee/new-employee.html
@@ -14,6 +14,7 @@
 		<input type="text" placeholder="FirstName" th:field="${employee.firstname}">
 		<input type="text" placeholder="LastName" th:field="${employee.lastname}">
 		<input type="email" placeholder="email" th:field="${employee.email}">
+		<input type ="hidden" name="_csrf" th:value="${_csrf.token}"/>
 
 			
 		<button type="submit">Create Employee</button>
