--- a/src/main/resources/templates/Employee/new-employee.html
+++ b/src/main/resources/templates/Employee/new-employee.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head th:replace="layout :: header">
@@ -9,12 +8,13 @@
 	<nav th:replace="layout :: navbar"></nav>
 	<br/>
 	<div class="container">
-		<form action="/employees/save" th:object="${employee}" method="POST">
+		<form th:action="@{/employees/save}" th:object="${employee}" method="POST">
 		
 		<input type="text" placeholder="FirstName" th:field="${employee.firstname}">
 		<input type="text" placeholder="LastName" th:field="${employee.lastname}">
 		<input type="email" placeholder="email" th:field="${employee.email}">
-		<input type ="hidden" name="_csrf" th:value="${_csrf.token}"/>
+		
+		<!--input type ="hidden" name="_csrf" th:value="${_csrf.token}"/-->
 
 			
 		<button type="submit">Create Employee</button>
