--- a/src/main/resources/templates/Project/new-project.html
+++ b/src/main/resources/templates/Project/new-project.html
@@ -9,7 +9,7 @@
 	<nav th:replace="layout :: navbar"></nav>
 	<br/>
 	<div class="container">
-		<form action="/projects/save" th:object="${project}" method="POST">
+		<form action th:action="@{/projects/save}" th:object="${project}" method="POST">
 		
 		<input type="text" placeholder="Project Name" th:field="${project.name}">
 		
@@ -27,7 +27,7 @@
 					th:text="${aEmployee.firstname}">
 			</select>
 			
-			<input type ="hidden" name="_csrf" th:value="${_csrf.token}"/>
+			<!-- input type ="hidden" name="_csrf" th:value="${_csrf.token}"/-->
 
 		
 		<button type="submit">Create Project</button>
